# enterprise-data-strategy-agent

./: .gitignore  LICENSE  README.md  app.py  doctor.sh  doctor_windows.bat  doctor_windows.ps1  pyproject.toml  requirements.txt  run_demo.sh  run_demo_windows.bat  run_demo_windows.ps1  setup.sh  setup_windows.bat  setup_windows.ps1
config/: sample_strategy_policy.yml
data/: sample_domo_inventory.json
docs/: architecture.md  domo_reference_implementation.md  future_platform_support.md  mac_linux_quickstart.md  quickstart.md  remediation_planning.md  roadmap.md  strategy_policy.md  web_ui.md  windows_quickstart.md
examples/: generated_lint_report.md  generated_remediation_backlog.json  generated_remediation_plan.md  generated_strategy_brief.md
src/enterprise_data_strategy_agent/: __init__.py  analyzer.py  backlog.py  cli.py  config.py  doctor.py  linting.py  models.py  planning.py  policy.py  report.py  sample_loader.py  scoring.py  ui.py  validation.py
src/enterprise_data_strategy_agent/connectors/: __init__.py  base.py  domo_mock.py
src/enterprise_data_strategy_agent/ui/: __init__.py  streamlit_app.py
tests/: test_analyzer.py  test_cli.py  test_connector.py  test_doctor.py  test_linting.py  test_planning.py  test_policy.py  test_report.py  test_scoring.py  test_ui.py  test_validation.py
