[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-data-strategy-agent"
version = "0.1.0"
description = "Open-source enterprise data strategy assistant using synthetic Domo-style metadata as a reference implementation."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {text = "MIT"}
authors = [{name = "Enterprise Data Strategy Agent Contributors"}]
dependencies = ["PyYAML>=6.0", "pytest>=8.0", "streamlit>=1.36"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
ui = ["streamlit>=1.36"]

[project.scripts]
enterprise-data-strategy-agent = "enterprise_data_strategy_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
